# HMINF

./: .gitignore  README.md  pyproject.toml
hminf/: main.py
res/: Cube.stl  labubu_keychain_voxel_mc_16k.stl
src/: Physics.py  Sphere.py  box.py  main.py  physics.py
src/controller/: programController.py
src/model/: Material.py  boxWorld.py  colliders.py  collision.py  collisionDetector.py  geometry.py  material.py  physics.py  rigidBody.py  rigid_body.py  stlMesh.py
src/res/: Cube2.stl
src/sim/: core.py
src/util/: MathHelpers.py  config.py  log.py
src/view/: uiControls.py  visualsVPython.py  vpython_ui.py
