[project]
name = "hminf"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "trimesh (>=4.10.0,<5.0.0)",
    "raylib (>=5.5.0.3,<6.0.0.0)",
    "pybullet (>=3.2.7,<4.0.0)"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

